welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:31: error: ';' expected but '.' found.
    if (estFaceMur ()) && getDirection == Direction.OUEST) {
                                                   ^