welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisseBrosse()
  avance()
  while (PositionFinale  == false) {
    avanceSerpent()
  }
}

def PositionFinale() : Boolean = {
  if (estFaceMur()) {
    if (getDirection == Direction.EST) {
      gauche()
      if (estFaceMur()) {
        return true
      }
    }
    else if (getDirection == Direction.OUEST) {
      droite()
      if (estFaceMur()) {
        return true
      }
    }
  }
    return false
}  
  
def avanceSerpent() {
  while(!estFaceMur()) {
    avance()
  }
    if (estFaceMur ()) && getDirection == Direction.OUEST) {
      droite()
      if (!estFaceMur()) {
      avance()
      droite()
      }
    }
    else if (estFaceMur() && getDirection == Direction.EST) {
      gauche()
      if (!estFaceMur()){
      avance()
      gauche()
    }  
}
}